--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "styled-component": "^2.8.0",
     "web-vitals": "^1.1.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
