--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,18 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-relay": "^11.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
+    "relay-runtime": "^11.0.1",
     "styled-component": "^2.8.0",
     "web-vitals": "^1.1.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run relay && react-scripts start",
+    "build": "npm run relay && react-scripts build",
+    "relay": "relay-compiler --schema schema.graphql --src ./src/ --watchman false $@",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-relay": "^11.0.1",
+    "graphql": "^15.5.0",
+    "relay-compiler": "^11.0.1"
   }
 }
